--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("imgs/fon.png") center/cover no-repeat;
+  background: url("/imgs/fon.png?v=1") center/cover no-repeat;
   opacity: 0.3;
   z-index: 0;
 }
@@ -592,7 +592,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("imgs/fon2.png") center/cover no-repeat;
+  background: url("/imgs/fon2.png?v=1") center/cover no-repeat;
   opacity: 0.3;
   z-index: 0;
 }
